create principal components

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,35 +1,24 @@
-@import './base.css';
-
-#app {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  font-weight: normal;
+body {
+  margin: 0%;
 }
 
-a,
-.green {
-  text-decoration: none;
-  color: hsla(160, 100%, 37%, 1);
-  transition: 0.4s;
-  padding: 3px;
-}
-
-@media (hover: hover) {
-  a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
-  }
-}
-
-@media (min-width: 1024px) {
-  body {
+header { 
+  #logo{
+    width: 200px;
     display: flex;
-    place-items: center;
+    margin: auto;
+    background-color: #78174a;
+    color: #cbc1c2;
+    text-align: center;
   }
 
-  #app {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    padding: 0 2rem;
+  #upLineLogo{
+    font-size: 32px;
+    font-weight: 200;
+  }
+  
+  #underLineLogo{
+    font-size: 16px;
   }
 }
+
